# MiniNebula

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: CI.yml
Scripts/: Build.bat  Build.ps1  Build.sh  Common.txt
Sripts/: Common.txt
inc/__MiniNebula/: App.h  CollisionBox.h  CollisionLayer.h  CollisionManager.h  MapManager.h  Renderable.h  ResourceManager.h  SceneManager.h  Sprite.h  Timer.h  __Math.h
res/scenes/: mapping.json  scene1.json
res/templates/: SceneMapping.json
src/: App.cpp  CollisionBox.cpp  CollisionManager.cpp  MapManager.cpp  ResourceManager.cpp  SceneManager.cpp  Sprite.cpp  Timer.cpp  main.cpp
